[package]
name = "chunky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bevy = ["dep:bevy"]

[dependencies]
bevy = { version = "0.11", optional = true }
intbits = "*"
itertools = "*"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "*"

[[bench]]
name = "packed_ints"
harness = false
